--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
           <!-- Sidebar -->
           <aside id="sidebar">
             <div class="sidebar-top pd-left-20 disp-flex">
-              <img class="logo-spotify "src="img/logo.svg" alt="Spotify Logo">
+              <a href="#">
+                <img class="logo-spotify "src="img/logo.svg" alt="Spotify Logo">
+              </a>
               <div class="sidebar-top-options disp-flex">
                 <a class="disp-flex" href="#">
                   <img src="img/home.svg" alt="Home Logo">
@@ -37,11 +39,9 @@
               </div>
               <div class="sidebar-top-playlist disp-flex">
                 <h3>Playlist</h3>
-                <a class="disp-flex" href="#">
-                <span>
+                <a class="disp-flex align-it-center" href="#">
                   <i class="fas fa-plus"></i>
-                  Crea Playlist
-                </span>
+                  <span>Crea Playlist</span>
                 </a>
                 <a class="disp-flex flex-dir-clm" href="#">
                   <span>Nuova Playlist</span>
@@ -56,10 +56,9 @@
             </div>
 
             <div class="sidebar-bottom pd-left-20 disp-flex flex-dir-clm">
-              <a href="#">
-                <span>
-                  <i class="far fa-arrow-alt-circle-down"> Installa app</i>
-                </span>
+              <a class="disp-flex" href="#">
+                <i class="far fa-arrow-alt-circle-down"></i>
+                <span>Installa app</span>
               </a>
               <a class="disp-flex" href="#">
                 <img class="border-radius" src="img/profile.svg" alt="Profile Image">
@@ -105,32 +104,42 @@
                   <div class="content-card">
                     <a href="#">
                       <img src="img/metal_lifting.jpg" alt="Heavy Metal Image">
+                    </a>
                       <h3>Heavy Metal</h3>
                       <span>Subtitle</span>
-                    </a>
                   </div>
                   <div class="content-card">
-                    <img src="img/stranger.jpeg" alt="Stranger Things Image">
+                    <a href="#">
+                      <img src="img/stranger.jpeg" alt="Stranger Things Image">
+                    </a>
                     <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
                     <span>Kyle Dixon & Michael Stein</span>
                   </div>
                   <div class="content-card">
-                    <img src="img/aquietplace.jpeg" alt="A quiet place Image">
+                    <a href="#">
+                      <img src="img/aquietplace.jpeg" alt="A quiet place Image">
+                    </a>
                     <h3>A quiet place</h3>
                     <span>Subtitle</span>
                   </div>
                   <div class="content-card">
-                    <img src="img/split.jpeg" alt="Split Image">
+                    <a href="#">
+                      <img src="img/split.jpeg" alt="Split Image">
+                    </a>
                     <h3>Split</h3>
                     <span>Subtitle</span>
                   </div>
                   <div class="content-card">
-                    <img src="img/cure.jpeg" alt="A cure for wellness Image">
+                    <a href="#">
+                      <img src="img/cure.jpeg" alt="A cure for wellness Image">
+                    </a>
                     <h3>A cure for wellness</h3>
                     <span>Subtitle</span>
                   </div>
                   <div class="content-card">
-                    <img src="img/sinister.jpeg" alt="Sinister Image">
+                    <a href="#">
+                      <img src="img/sinister.jpeg" alt="Sinister Image">
+                    </a>
                     <h3>Sinister</h3>
                     <span>Subtitle</span>
                   </div>
@@ -142,25 +151,34 @@
                 <span>Più ascolti, più accurati saranno i suggerimenti</span>
                 <div class="disp-flex">
                   <div class="content-card">
-                    <img src="img/radar.jpeg" alt="Release Radar Image">
+                    <a href="#">
+                      <img src="img/radar.jpeg" alt="Release Radar Image">
+                    </a>
                     <h3>Release Radar</h3>
                   </div>
                   <div class="content-card">
-                    <img src="img/mixdaily.jpeg" alt="Daily Mix Image">
+                    <a href="#">
+                      <img src="img/mixdaily.jpeg" alt="Daily Mix Image">
+                    </a>
                     <h3>Daily Mix</h3>
                   </div>
                 </div>
               </section>
+
               <section class="content-category">
                 <h2>Artisti più popolari</h2>
                 <span>Più ascolti, più accurati saranno i suggerimenti</span>
                 <div class="disp-flex">
                   <div class="content-card">
-                    <img class="border-radius"src="img/young.jpeg" alt="Lana del Rey Image">
+                    <a href="#">
+                      <img class="border-radius"src="img/young.jpeg" alt="Lana del Rey Image">
+                    </a>
                     <h3>Lana Del Rey</h3>
                   </div>
                   <div class="content-card">
-                    <img class="border-radius"src="img/einaudi.jpeg" alt="Ludovico Einaudi Image">
+                    <a href="#">
+                      <img class="border-radius"src="img/einaudi.jpeg" alt="Ludovico Einaudi Image">
+                    </a>
                     <h3>Ludovico Einaudi</h3>
                   </div>
                 </div>
@@ -184,7 +202,7 @@
               </a>
             </a>
           </div>
-          <div class="player-actions disp-flex">
+          <div class="player-actions disp-flex flex-dir-clm align-it-center">
             <a href="#">
               <i class="fas fa-random"></i>
               <i class="fas fa-caret-left"></i>
@@ -192,19 +210,21 @@
               <i class="fas fa-caret-right"></i>
               <i class="fas fa-redo-alt"></i>
             </a>
+            <div class="disp-flex align-it-center">
+              <span>0:25</span>
+              <div class="player-actions-time"></div>
+              <span>4:35</span>
+            </div>
           </div>
 
-          <div class="player-volume disp-flex">
+          <div class="player-volume disp-flex align-it-center">
             <a href="#">
               <i class="fas fa-list-ul"></i>
               <i class="fas fa-desktop"></i>
               <i class="fas fa-volume-up"></i>
             </a>
+            <div class="player-volume-hight"></div>
           </div>
-
-
-
-
         </footer>
     </div>
 
