Modifiche Progetto Spotify Web

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="sidebar-top">
               <a href="#">
                 <img class="logo-spotify disp-flex mg-left-20" src="img/logo.svg" alt="Spotify Logo">
+                <img class="logo-small" src="img/logo-small.svg" alt="Spotify logo">
               </a>
               <div class="sidebar-top-options">
                 <ul class="disp-flex flex-dir-cln font-size-13 mg-bottom-10">
@@ -48,8 +49,8 @@
                 <ul class="font-size-13 mg-top-15">
                   <li class="mg-bottom-20">
                     <a class="disp-flex align-it-center color" href="#">
-                      <!-- <i class="fas fa-plus mg-right-10"></i> -->
-                      <i class="fas fa-plus-square mg-right-10"></i>
+                      <i class="fas fa-plus mg-right-10"></i>
+                      <!-- <i class="fas fa-plus-square mg-right-10"></i> -->
                       <span class="color">Crea Playlist</span>
                     </a>
                   </li>
@@ -143,7 +144,7 @@
 
               <section class="content-category disp-flex">
                 <h2 class="mg-bottom-30">Recently played</h2>
-                <div class="disp-flex">
+                <div class="content-category-card disp-flex">
                   <div class="content-card">
                     <a href="#">
                       <div class="overlay">
@@ -192,7 +193,7 @@
                       <span class="color font-size-11">Subtitle</span>
                     </a>
                   </div>
-                  <div class="content-card mg-right-10">
+                  <div class="content-card mg-right-10 text-center">
                     <a href="#">
                       <div class="overlay">
                         <i class="far fa-play-circle"></i>
@@ -223,7 +224,7 @@
                 <h2 class="mg-bottom-20 mg-top-50">Crearo per John Doe</h2>
                 <span class="font-size-11  color">Più ascolti, più accurati saranno i suggerimenti</span>
                 <div class="disp-flex mg-top-30">
-                  <div class="content-card mg-right-10">
+                  <div class="content-card mg-right-10 text-center">
                     <a href="#">
                       <div class="overlay">
                         <i class="far fa-play-circle"></i>
@@ -253,18 +254,18 @@
                       <div class="overlay border-radius">
                         <i class="far fa-play-circle"></i>
                       </div>
-                      <img class="border-radius"src="img/young.jpeg" alt="Lana del Rey Image">
+                      <img class="border-radius" src="img/young.jpeg" alt="Lana del Rey Image">
                     </a>
                     <h4 class="pd-top-20">Lana Del Rey</h4>
                   </div>
-                  <div class="content-card">
+                  <div class="content-card einaudi">
                     <a href="#">
                       <div class="overlay border-radius">
                         <i class="far fa-play-circle"></i>
                       </div>
-                      <img class="border-radius"src="img/einaudi.jpeg" alt="Ludovico Einaudi Image">
+                      <img class="border-radius" src="img/einaudi.jpeg" alt="Ludovico Einaudi Image">
                     </a>
-                    <h4 class="pd-top-20">Ludovico Einaudi</h4>
+                    <h4 class="pd-top-20 text-center">Ludovico Einaudi</h4>
                   </div>
                 </div>
               </section>
@@ -298,8 +299,8 @@
             </ul>
           </div>
 
-          <div class="player-actions disp-flex flex-dir-cln align-it-center">
-            <ul class="disp-flex align-it-center mg-bottom-15">
+          <div class="player-actions">
+            <ul class="disp-flex align-it-center justify-cont-center mg-bottom-15">
               <li>
                 <a href="#">
                   <i class="fas fa-random mg-right-20"></i>
@@ -326,7 +327,7 @@
                 </a>
               </li>
             </ul>
-            <div class="disp-flex align-it-center">
+            <div class="disp-flex align-it-center time-bar">
               <span class="font-size-11 mg-right-30">0:25</span>
               <div class="player-actions-time">
                 <a href="#">
